# Idril

./: .gitignore  CMakeLists.txt  README.md
doc/: Password-Block-diagram.odg
libs/: simplePasswordManager.hpp
src/: CMakeLists.txt  main.cpp  simplePasswordManager.cpp
utils/: runDriver
